task14.5/task2/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: one
  labels:
    app: one
spec:
  containers:
  - name: nginx
    image: dantuluri/pingpong
---
apiVersion: v1
kind: Pod
metadata:
  name: two
  labels:
    app: two
spec:
  containers:
  - name: nginx
    image: dantuluri/pingpong
