task14.5/task2/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: one
spec:
  podSelector: 
    matchLabels:
      app: one
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: two
    - ipBlock:
        cidr: 0.0.0.0/0
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: two
spec:
  podSelector: 
    matchLabels:
      app: two
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: one
